# TreeHub

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pdd.md  pyproject.toml  registry.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  platform_request.yml
.github/workflows/: ci.yml  validate-pr.yml  weekly-index.yml
cli/: __init__.py  requirements.txt  treehub.py
docs/: app.js  index.html  style.css
indices/_template/: README.md  example-manifest.json  example-tree.json
mcp-server/: __init__.py  requirements.txt  server.py
schemas/: manifest-schema.json  tree-schema.json
scripts/: __init__.py  crawler.py  differ.py  indexer.py  validator.py
tests/: test_crawler_conditional.py
