[project]
name = "treehub"
version = "0.1.0"
description = "The Wikipedia of AI Indices — Pre-built, versioned PageIndex trees for popular developer platforms."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "TreeHub Contributors" },
]
keywords = ["mcp", "ai", "documentation", "index", "pageindex", "llms-txt"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "httpx>=0.24.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
indexer = [
    "openai>=1.0.0",
]

[project.scripts]
treehub = "cli.treehub:cli"

[project.urls]
Homepage = "https://github.com/treehub/indices"
Documentation = "https://github.com/treehub/indices#readme"
Repository = "https://github.com/treehub/indices"
Issues = "https://github.com/treehub/indices/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
